--- a/valioso_Mapp/templates/valioso_Mapp/index.html
+++ b/valioso_Mapp/templates/valioso_Mapp/index.html
@@ -43,7 +43,7 @@
             </a>
             <ul class="menu">
                 <li>
-                    <a class="boton-nav" href="Pages/ComoFunciona.html"><svg class="svg"
+                    <a class="boton-nav" href="{% url 'como_funciona' %}"><svg class="svg"
                             xmlns="http://www.w3.org/2000/svg" height="1.5vw"
                             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                             <path
