--- a/valioso_Mapp/templates/valioso_Mapp/Pages/ComoFunciona.html
+++ b/valioso_Mapp/templates/valioso_Mapp/Pages/ComoFunciona.html
@@ -12,7 +12,7 @@
 <body>
     <header class="caja">
         <div class="logo">
-            <a href="../index.html">
+            <a href="{% url 'inicio' %}">
                 <img src="{% static 'valioso_Mapp/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
             </a>
         </div>
