--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,15 +1,14 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
-    {% load static %}
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valioso Mango</title>
-    <link rel="stylesheet" href="{% static 'valioso_Mapp/estilos/estilos_index.css' %}">
+    <link rel="stylesheet" href="{% static 'core/estilos/estilos_index.css' %}">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="{% static 'valioso_Mapp/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
 
 </head>
 
@@ -17,7 +16,7 @@
 <body class="contenedor-flex">
 
     <header class="caja">
-        <img src="{% static 'valioso_Mapp/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
+        <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
         <div class="title">
             <h1>Valioso Mango</h1>
             <h2>Comercio simple y sin dinero</h2>
@@ -73,7 +72,8 @@
 
     <main class="main img">
         <section id="box" class="caja-busqueda caja"></section>
-        <video id="responsive-video" src="{% static 'valioso_Mapp/Sources/registrateHorizontal FULL (1440 x 900 px).mp4' %}" autoplay loop muted>
+        <video id="responsive-video" src="{% static 'core/Sources/registrateHorizontal FULL (1440 x 900 px).mp4' %}"
+            autoplay loop muted>
         </video>
     </main>
 
@@ -88,7 +88,7 @@
 
 
 
-<script src="JavaScript/script_index.js"></script>
+    <script src="JavaScript/script_index.js"></script>
 
 </body>
 
