cambie nombres de carpetas

--- a/core/templates/core/Pages/ingreso.html
+++ b/core/templates/core/Pages/ingreso.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+    {% load static %}
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../Estilos/estilos_registro.css">
+    <link rel="stylesheet" href="{% static 'core/estilos/estilos_registro.css'%}">
     <title>Ingreso usuario Valioso Mango</title>
     <link rel="icon" href="../Sources/Favicon (16 x 16px).svg" type="image/x-icon">
 </head>
