solo agregue un icono

--- a/core/templates/core/Pages/ingreso.html
+++ b/core/templates/core/Pages/ingreso.html
@@ -8,14 +8,14 @@
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'core/estilos/estilos_registro.css'%}">
     <title>Ingreso usuario Valioso Mango</title>
-    <link rel="icon" href="../Sources/Favicon (16 x 16px).svg" type="image/x-icon">
+    <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
 </head>
 
 <body class="formulario_registro">
     <header>
         <div class="logo">
             <a href="../index.html">
-                <img src="../Sources/LogoValiosoMango.svg" class="logo" alt="Logo Mango">
+                <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
             </a>
         </div>
         <h1>
