--- a/core/templates/core/Pages/registro_usuario.html
+++ b/core/templates/core/Pages/registro_usuario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../Estilos/estilos_registro.css">
+    <link rel="stylesheet" href="{../Estilos/estilos_registro.css}">
     <title>Registro usuario Valioso Mango</title>
     <link rel="icon" href="../Sources/Favicon (16 x 16px).svg" type="image/x-icon">
 </head>
