--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -58,7 +58,7 @@
                         </svg>INGRESO</a>
                 </li>
                 <li>
-                    <a class="boton-nav" href="Pages/registro_usuario.html"><svg xmlns="http://www.w3.org/2000/svg"
+                    <a class="boton-nav" href="{% url 'registro' %}"><svg xmlns="http://www.w3.org/2000/svg"
                             height="1em" viewBox="0 0 640 512">
                             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                             <path
