ya arregle el video, pero hay que saber que ahora se carga el inicio desde get_size y no desde index

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -72,9 +72,7 @@
 
     <main class="main img">
         <section id="box" class="caja-busqueda caja"></section>
-        <video id="responsive-video" src="{% static 'core/Sources/registrateHorizontal FULL (1440 x 900 px).mp4' %}"
-            autoplay loop muted>
-        </video>
+        {% block video %}{% endblock %}
     </main>
 
 
