hice algo de la herencia para el footer y el video

--- a/core/templates/core/Pages/ingreso.html
+++ b/core/templates/core/Pages/ingreso.html
@@ -14,7 +14,7 @@
 <body class="formulario_registro">
     <header>
         <div class="logo">
-            <a href="">
+            <a href="{% url 'inicio' %}">
                 <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
             </a>
         </div>
