--- a/core/templates/core/Pages/MiTienda.html
+++ b/core/templates/core/Pages/MiTienda.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="">
+        <a href="{% url 'inicio' %}">
             <img src="{% static 'core/Sources/LogoMango.svg' %}" class="logo" alt="Logo Mango">
         </a>
         <h1 class="Glacial">Mi tienda</h1>
