--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block estilo %}
-    <link rel="stylesheet" href="{% static 'core/estilos/estilos_index.css' %}">
+<link rel="stylesheet" href="{% static 'core/estilos/estilos_index.css' %}">
 {% endblock %}
 
 <body>
@@ -35,7 +35,7 @@
             <ul class="menu">
                 <li>
                     <a class="boton-nav" href="{% url 'como_funciona' %}"><svg class="svg"
-                            xmlns="http://www.w3.org/2000/svg" height="1.5vw"
+                            xmlns="http://www.w3.org/2000/svg" height="1em"
                             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                             <path
                                 d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
@@ -43,7 +43,7 @@
                 </li>
                 <li>
                     <a class="boton-nav" href="{% url 'ingreso' %}"><svg xmlns="http://www.w3.org/2000/svg" class="svg"
-                            height="1.5vw"
+                            height="1em"
                             viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                             <path
                                 d="M217.9 105.9L340.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L217.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1L32 320c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM352 416l64 0c17.7 0 32-14.3 32-32l0-256c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0c53 0 96 43 96 96l0 256c0 53-43 96-96 96l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z" />
@@ -61,7 +61,7 @@
             </ul>
         </nav>
     </div>
-    
+
 
     <main class="main img">
         <section id="box" class="caja-busqueda caja"></section>
@@ -69,13 +69,13 @@
     </main>
 
     {%endblock%}
-    
 
 
 
-{%block script%}
+
+    {%block script%}
     <script src="{% static 'core/scripts/script_index.js' %}"></script>
-{%endblock%}
+    {%endblock%}
 </body>
 
 </html>
