--- a/core/static/core/estilos/estilos_registro.css
+++ b/core/static/core/estilos/estilos_registro.css
@@ -1,19 +1,22 @@
-*{
+* {
     box-sizing: border-box;
 }
+
 form section,
 form button {
     margin: 0 auto;
 }
-form{
+
+form {
     width: 40%;
 }
 
 body {
     background-color: darkorange;
-    margin: 10px;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
     font-family: "Glacial Indifference";
+    min-height: 100vh;
 }
 
 
@@ -91,7 +94,7 @@ button {
 
 #olvidaste {
     display: block;
-    
+
 }
 
 #recuerdame {
