--- a/core/templates/core/Pages/footer.html
+++ b/core/templates/core/Pages/footer.html
@@ -1,15 +1,18 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valioso Mango</title>
     {%block estilo %}{%endblock%}
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo_footer.css' %}">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
     <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
 
 </head>
+
 <body>
     {%block no_footer %}{%endblock%}
     <footer>
@@ -20,5 +23,5 @@
     </footer>
     {%block script%}{%endblock%}
 </body>
-</html>
 
+</html>
