--- a/core/templates/core/Pages/form_registro_usuario.html
+++ b/core/templates/core/Pages/form_registro_usuario.html
@@ -1,31 +1,16 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends "core/Pages/ingreso.html" %}
 {% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'core/estilos/estilos_registro.css' %}">
-    <title>Registro usuario Valioso Mango</title>
-    <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
-</head>
+{% block h1 %}
+<h1>
+    FORMULARIO DE REGISTRO
+</h1>
+<h2>
+    Nuevo Usuario Valioso Mango
+</h2>
+{%endblock%}
 
-<body>
-    <header>
-        <div class="logo">
-            <a href="{% url 'inicio' %}">
-                <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
-            </a>
-        </div>
-        <h1>
-            FORMULARIO DE REGISTRO
-        </h1>
-        <h2>
-            Nuevo Usuario Valioso Mango
-        </h2>
-    </header>
-    <main>
+{% block form %}
         <form action="achivodeprocesamiento.php" method="post">
             <label for="nombre">Nombre de Usuario:</label>
             <input type="text" name="nombre" minlength="7" id="nombre" required>
@@ -48,9 +33,8 @@
             <input type="email" name="correo" id="correo" required>
             <input class="form-buttons" type="submit" value="GUARDAR">
         </form>
-    </main>
-</body>
+{%endblock%}
+
+{%block script%}
 <script src="{% static 'core/scripts/script_registro.js' %}"></script>
-
-
-</html>
+{%endblock%}
