--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,77 +5,77 @@
 <link rel="stylesheet" href="{% static 'core/estilos/estilos_index.css' %}">
 {% endblock %}
 
-<body>
-    {% block no_footer %}
-    <header class="caja">
-        <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
-        <div class="title">
-            <h1>Valioso Mango</h1>
-            <h2>Comercio simple y sin dinero</h2>
-        </div>
-    </header>
 
-    <div id="contenedor-busqueda-nav">
-        <form id="busqueda-y-precio" class="caja">
-            <input type="text" id="busqueda" placeholder="Busqueda">
-            <section id="precios">
-                <p id="precio-oro"></p>
-                <p id="precio-dolar"></p>
-                <p id="precio-peso"></p>
-            </section>
-        </form>
-        <nav class="caja" id="nav">
-            <a id="menu-hamburguesa" class="boton-nav" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="3.5vw"
-                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
-                </svg>
-            </a>
-            <ul class="menu">
-                <li>
-                    <a class="boton-nav" href="{% url 'como_funciona' %}"><svg class="svg"
-                            xmlns="http://www.w3.org/2000/svg" height="1em"
-                            viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                            <path
-                                d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
-                        </svg>COMO FUNCIONA?</a>
-                </li>
-                <li>
-                    <a class="boton-nav" href="{% url 'ingreso' %}"><svg xmlns="http://www.w3.org/2000/svg" class="svg"
-                            height="1em"
-                            viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                            <path
-                                d="M217.9 105.9L340.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L217.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1L32 320c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM352 416l64 0c17.7 0 32-14.3 32-32l0-256c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0c53 0 96 43 96 96l0 256c0 53-43 96-96 96l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z" />
-                        </svg>INGRESO</a>
-                </li>
-                <li>
-                    <a class="boton-nav" href="{% url 'registro' %}"><svg xmlns="http://www.w3.org/2000/svg"
-                            height="1em" viewBox="0 0 640 512">
-                            <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                            <path
-                                d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
-                        </svg>
-                        ¡REGISTRATE!</a>
-                </li>
-            </ul>
-        </nav>
+{% block no_footer %}
+<header class="caja">
+    <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
+    <div class="title">
+        <h1>Valioso Mango</h1>
+        <h2>Comercio simple y sin dinero</h2>
     </div>
+</header>
+
+<div id="contenedor-busqueda-nav">
+    <form id="busqueda-y-precio" class="caja">
+        <input type="text" id="busqueda" placeholder="Busqueda">
+        <section id="precios">
+            <p id="precio-oro"></p>
+            <p id="precio-dolar"></p>
+            <p id="precio-peso"></p>
+        </section>
+    </form>
+    <nav class="caja" id="nav">
+        <a id="menu-hamburguesa" class="boton-nav" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" height="3.5vw"
+                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path
+                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+            </svg>
+        </a>
+        <ul class="menu">
+            <li>
+                <a class="boton-nav" href="{% url 'como_funciona' %}"><svg class="svg"
+                        xmlns="http://www.w3.org/2000/svg" height="1em"
+                        viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <path
+                            d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
+                    </svg>COMO FUNCIONA?</a>
+            </li>
+            <li>
+                <a class="boton-nav" href="{% url 'ingreso' %}"><svg xmlns="http://www.w3.org/2000/svg" class="svg"
+                        height="1em"
+                        viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <path
+                            d="M217.9 105.9L340.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L217.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1L32 320c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM352 416l64 0c17.7 0 32-14.3 32-32l0-256c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0c53 0 96 43 96 96l0 256c0 53-43 96-96 96l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z" />
+                    </svg>INGRESO</a>
+            </li>
+            <li>
+                <a class="boton-nav" href="{% url 'registro' %}"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                        viewBox="0 0 640 512">
+                        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <path
+                            d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+                    </svg>
+                    ¡REGISTRATE!</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 
-    <main class="main img">
-        <section id="box" class="caja-busqueda caja"></section>
-        {% block video %}{% endblock %}
-    </main>
+<main class="main img">
+    <section id="box" class="caja-busqueda caja"></section>
+    {% block video %}{% endblock %}
+</main>
 
-    {%endblock%}
-
-
+{%endblock%}
 
 
-    {%block script%}
-    <script src="{% static 'core/scripts/script_index.js' %}"></script>
-    {%endblock%}
-</body>
+
+
+{%block script%}
+<script src="{% static 'core/scripts/script_index.js' %}"></script>
+{%endblock%}
+
 
 </html>
