pase los nombres de camelCase a snake_case

--- a/core/templates/core/Pages/como_funciona.html
+++ b/core/templates/core/Pages/como_funciona.html
@@ -5,16 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'core/estilos/estiloMango.css' %}">
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo_mango.css' %}">
     <title>Cómo Funciona Valioso Mango</title>
-    <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'core/sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
 </head>
 
 <body>
     <header class="caja">
         <div class="logo">
             <a href="{% url 'inicio' %}">
-                <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
+                <img src="{% static 'core/sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
             </a>
         </div>
         <div class="title">
