--- a/core/templates/core/Pages/mi_tienda.html
+++ b/core/templates/core/Pages/mi_tienda.html
@@ -1,4 +1,4 @@
-{% extends "core/Pages/footer.html" %}
+{% extends "core/pages/footer.html" %}
 {% load static %}
 
 
@@ -11,7 +11,7 @@
 {% block no_footer %}
 <header>
     <a href="">
-        <img src="{% static 'core/Sources/LogoMango.svg' %}" class="logo" alt="Logo Mango">
+        <img src="{% static 'core/sources/LogoMango.svg' %}" class="logo" alt="Logo Mango">
     </a>
     <h1 class="Glacial">Mi tienda</h1>
 
