--- a/core/templates/core/Pages/footer.html
+++ b/core/templates/core/Pages/footer.html
@@ -9,7 +9,7 @@
     {%block estilo %}{%endblock%}
     <link rel="stylesheet" href="{% static 'core/estilos/estilo_footer.css' %}">
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="{% static 'core/Sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'core/sources/Favicon (16 x 16px).svg' %}" type="image/x-icon">
 
 </head>
 
