--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,4 +1,4 @@
-{% extends "core/Pages/footer.html" %}
+{% extends "core/pages/footer.html" %}
 {% load static %}
 
 {% block estilo %}
@@ -8,7 +8,7 @@
 
 {% block no_footer %}
 <header class="caja">
-    <img src="{% static 'core/Sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
+    <img src="{% static 'core/sources/LogoValiosoMango.svg' %}" class="logo" alt="Logo Mango">
     <div class="title">
         <h1>Valioso Mango</h1>
         <h2>Comercio simple y sin dinero</h2>
