--- a/core/templates/core/Pages/form_ingreso.html
+++ b/core/templates/core/Pages/form_ingreso.html
@@ -1,3 +1,6 @@
+
+
+
 {% extends "core/pages/ingreso.html" %}
 {% load static %}
 {% block h1 %}
@@ -6,20 +9,40 @@
 </h1>
 {%endblock%}
 {% block form %}
-<form method="post">
+<style>
+    .caja {
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #ffffff;
+  background: #4D9906;
+  margin: 0 0 25px;
+  overflow: hidden;
+  padding: 20px;
+  }
+</style>
+<form method="post" action="{% url 'ingreso' %}">
+    {% csrf_token %}
     <label for="nombre">Nombre de Usuario:</label>
-    <input type="text" name="nombre" id="nombre" required>
-    <label for="password">Contraseña:</label>
-    <input type="password" name="pass" id="password" required>
+    <input type="text" name="nombreusuario" id="nombreusuario" required>
+    <label for="contraseña">Contraseña:</label>
+    <input type="password" name="contraseña" id="clave" required>
+    
+        {% if mensaje_error %}
+            <p class="caja">{{ mensaje_error }}</p>
+        {% endif %}
+  
     <div id="check-recuerdame">
         <input type="checkbox" name="recordarme" id="recordarme">
-        <label for="recordarme" id="recuerdame">Recuérdame</label>
+        <label for="recordarme" id="recordarme">Recuérdame</label>
     </div>
     <a id="olvidaste" href="#">Olvidaste tu contraseña?</a>
     <input type="submit" value="Enviar" id="enviar">
 </form>
-{%endblock%}
 
+{%endblock%}
+<!--
 {% block script%}
 <script src="{% static 'core/scripts/script_ingreso.js' %}"></script>
 {%endblock%}
+-->
