agregue el agregar producto, hay que seguir por agregar esos productos a la interfaz

--- a/core/templates/core/Pages/mi_tienda.html
+++ b/core/templates/core/Pages/mi_tienda.html
@@ -46,6 +46,8 @@
 
                 <label for="fotos-agregar">Fotos:</label>
                 <input type="file" name="fotos" id="fotos-agregar" accept="image/png, image/jpeg" required>
+                <input type="file" name="fotos2" id="fotos-agregar2" accept="image/png, image/jpeg">
+                <input type="file" name="fotos3" id="fotos-agregar3" accept="image/png, image/jpeg">
                 <label for="precio-agregar">Precio:</label>
                 <input type="number" name="precio" id="precio-agregar">
 
