--- a/core/templates/core/Pages/mi_tienda.html
+++ b/core/templates/core/Pages/mi_tienda.html
@@ -72,7 +72,7 @@
         </div>
     </div>
     {% for producto in productos %}
-        <article class="flex-item">
+        <article class="flex-item" id="{{producto.titulo}}">
             <!-- aca hay que poner la imagen -->
             <a href="{{producto.foto1.url}}">
                 <!-- y aca -->
