--- a/core/templates/core/Pages/mi_tienda.html
+++ b/core/templates/core/Pages/mi_tienda.html
@@ -48,7 +48,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Editar producto</p>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="" method=PUT enctype="multipart/form-data">
                 {% csrf_token %}
                 {{editar_form.as_p}}
 
