--- a/core/templates/core/Pages/mi_tienda.html
+++ b/core/templates/core/Pages/mi_tienda.html
@@ -59,7 +59,11 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Eliminar producto</p>
-            Seleccione producto a eliminar:
+            <form action="" method=POST enctype="multipart/form-data">
+                {% csrf_token %}
+                {{eliminar_form.as_p}}
+                <input class="form-buttons" type="submit" name="eliminar-producto" value="ELIMINAR">
+            </form>
 
         </div>
     </div>
