--- a/core/static/core/estilos/estilos_index.css
+++ b/core/static/core/estilos/estilos_index.css
@@ -72,6 +72,7 @@ header.producto {
 }
 
 .flex-item:hover {
+    cursor: pointer;
     transform: scale(1.03);
     transition: transform 0.2s;
     -webkit-animation: in 0.2s forwards;
@@ -557,6 +558,58 @@ main {
     -moz-animation: con_prods 0.2s forwards;
     -o-animation: con_prods 0.2s forwards;
     animation: con_prods 0.2s forwards;
+}
+
+.modal {
+    display: block;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #333;
+    color: #eee;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+.modal-content p {
+    position: static;
+    font-size: 19px;
+    align-self: center;
+
+}
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @keyframes con_prods {
