hice el comportamiento que carga las imagenes en los productos al darles click, antes de eso solo carga la primera imagen. falta hacer el carrusel y algun estilo

--- a/core/static/core/estilos/estilos_index.css
+++ b/core/static/core/estilos/estilos_index.css
@@ -590,8 +590,21 @@ main {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    display: flex;
+    flex-direction: column;
     /* Could be more or less, depending on screen size */
 }
+
+.product-image{
+    display: flex;
+    flex-direction: row;
+}
+
+.product-image p{
+    margin: auto 10px;
+}
+
+
 .modal-content p {
     position: static;
     font-size: 19px;
